--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,6 @@
     "license": "GPL-2.0",
     "require": {
         "php": ">=5.6",
-        "typhonius/acquia-php-sdk-v2": "*",
         "composer-plugin-api": "^1.0.0",
         "composer/installers": "^1.2.0",
         "composer/semver": "^1.4",
@@ -38,6 +37,7 @@
         "symfony/twig-bridge": "^3.3",
         "symfony/yaml": "~3.2.8",
         "tivie/php-os-detector": "^1.0",
+        "typhonius/acquia-php-sdk-v2": "^1.0.0",
         "wikimedia/composer-merge-plugin": "^1.4.1"
     },
     "autoload": {
