Fixes #2277: Add internal Travis CI build to test drupal/core HEAD.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,6 @@ dist: trusty
 php:
   - 7.1
 
-matrix:
-  fast_finish: true
-
 env:
   global:
     - DEPLOY_SOURCE_BRANCH=8.x
@@ -15,6 +12,15 @@ env:
     - BLT_DIR=$TRAVIS_BUILD_DIR
     - IS_PULL_REQUEST=$TRAVIS_PULL_REQUEST
     - BUILD_DIR=$TRAVIS_BUILD_DIR
+    - DRUPAL_CORE_HEAD=8.5.x-dev
+  matrix:
+    - DRUPAL_CORE_VERSION=default
+    - DRUPAL_CORE_VERSION=$DRUPAL_CORE_HEAD
+
+matrix:
+  allow_failures:
+    - env: DRUPAL_CORE_VERSION=$DRUPAL_CORE_HEAD
+  fast_finish: true
 
 cache:
   bundler: true
@@ -75,6 +81,7 @@ deploy:
     on:
       branch: $DEPLOY_SOURCE_BRANCH
       php: 7.1
+      condition: $DRUPAL_CORE_VERSION = default
   - provider: script
     # Deploys build artifact's source branch to acquia-pso/blted8 on GitHub.
     script: ${BLT_DIR}/scripts/blt/ci/internal/deploy_blted8.sh
@@ -82,3 +89,4 @@ deploy:
     on:
       branch: $DEPLOY_SOURCE_BRANCH
       php: 7.1
+      condition: $DRUPAL_CORE_VERSION = default
