--- a/template/drush/drush.yml
+++ b/template/drush/drush.yml
@@ -1,3 +1,6 @@
+# This file defines drush configuration that applies to drush commands
+# for the entire application. For site-specific settings, like URI, use
+# ../docroot/sites/[site]/drush.yml
 drush:
   paths:
     # Load a drush.yml configuration file from the current working directory.
