Massive refactor of BLT doctor. (#2400)
* Fixed doctor.

* Massive refactor of BLT doctor.

* PHPCS.

* Fixing site install command.

* Fix typo.

* Patch drush to recursively load config.

* Fix copy error.

* Updating drush to 9.0.x-dev.

* Removing composer.lock.

* Adding blt status command.

* Update drush.

* Run drush server with BLT doctor command.

* Making simplesamlphp:init patch .htaccess.

* Travis fixes.

* Fixing patch.

* Fix saml test.

* Fix multisite test.

* Updating test.

--- a/template/drush/drush.yml
+++ b/template/drush/drush.yml
@@ -1,7 +1,11 @@
+# This file defines drush configuration that applies to drush commands
+# for the entire application. For site-specific settings, like URI, use
+# ../docroot/sites/[site]/drush.yml
 drush:
   paths:
     # Load a drush.yml configuration file from the current working directory.
-    config: ../vendor/acquia/blt/drush/drushrc.php
+    config:
+      - ../docroot/sites/default/local.drush.yml
     include:
       - '${env.home}/.drush'
       - /usr/share/drush/commands
