--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,8 @@ before_install:
 
 install:
   - source ${BLT_DIR}/scripts/travis/setup_environment
+  # Create second db for multisite testing.
+  - mysql -u root -e "CREATE DATABASE drupal2; GRANT ALL ON drupal2.* TO 'drupal'@'localhost';"
   - source ${BLT_DIR}/scripts/travis/setup_project
 
 script:
