--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "doctrine/common": "^2.5",
         "doctrine/inflector": "~1.1.0",
         "drupal/coder": "^8.2.11",
-        "drush/drush": "^9.0.0-beta9",
+        "drush/drush": "9.0.x-dev",
         "grasmash/drupal-security-warning": "^1.0.0",
         "grasmash/yaml-cli": "^1.0.0",
         "grasmash/yaml-expander": "^1.2.0",
@@ -48,7 +48,8 @@
         }
     },
     "extra": {
-        "class": "Acquia\\Blt\\Composer\\Plugin"
+        "class": "Acquia\\Blt\\Composer\\Plugin",
+        "composer-exit-on-patch-failure": true
     },
     "bin": [
         "bin/blt"
@@ -57,7 +58,8 @@
         "drupal/core": "7.*"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "php": "5.6"
     },
     "suggest": {
         "hirak/prestissimo": "^0.3",
