--- a/.travis.yml
+++ b/.travis.yml
@@ -50,8 +50,10 @@ before_install:
 
 install:
   - source ${BLT_DIR}/scripts/travis/setup_environment
-  # Create second db for multisite testing.
+  # Create extra dbs for multisite testing.
   - mysql -u root -e "CREATE DATABASE drupal2; GRANT ALL ON drupal2.* TO 'drupal'@'localhost';"
+  - mysql -u root -e "CREATE DATABASE drupal2; GRANT ALL ON drupal3.* TO 'drupal'@'localhost';"
+  - mysql -u root -e "CREATE DATABASE drupal2; GRANT ALL ON drupal4.* TO 'drupal'@'localhost';"
   - source ${BLT_DIR}/scripts/travis/setup_project
 
 script:
