--- a/config/build.yml
+++ b/config/build.yml
@@ -139,7 +139,8 @@ project:
 setup:
   # Valid values are install, sync, import.
   strategy: install
-  # If setup.strategy is import, this file will be imported.
+  # If setup.strategy is import, this file will be imported. File path is
+  # relative to drupal docroot directory.
   dump-file: null
 
 sync:
