--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,7 +2,10 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.6/phpunit.xsd"
   colors="true"
-  bootstrap="tests/phpunit/bootstrap.php">
+  bootstrap="tests/phpunit/bootstrap.php"
+  stopOnFailure="true"
+  stopOnError="true"
+  verbose="true">
 
   <testsuites>
     <testsuite name="BLT Test Suite">
@@ -15,7 +18,7 @@
     <!-- E.g., `BLT_PRINT_COMMAND_OUTPUT=1 ./vendor/bin/phpunit` -->
     <env name="BLT_RECREATE_SANDBOX_MASTER" value="1"/>
     <env name="BLT_PRINT_COMMAND_OUTPUT" value="0"/>
-    <env name="BLT_OVERWRITE_SANDBOX_INSTANCE" value="1"/>
+    <env name="BLT_REPLACE_SANDBOX_INSTANCE" value="1"/>
     <env name="BLT_ENV" value="ci"/>
 
     <!--Uncomment and edit one of the lines below depending on DB platform.-->
