--- a/template/blt/ci.yml
+++ b/template/blt/ci.yml
@@ -3,6 +3,7 @@
 #   sync - Uses `blt sync` to pull a remote db from drush.aliases.remote.
 #   import - Imports a .sql file from setup.dump-file.
 # setup.strategy: import
+# Relative to the drupal docroot directory.
 # setup.dump-file: /tmp/my-dump-file.sql
 tests.run-server: true
 # The local.hostname must be set to 127.0.0.1:8888 because we are using drush runserver to test the site.
