--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Ignore composer.lock to allow highest/lowest testing.
 composer.lock
 
 # Ignore blted8 files
@@ -124,4 +125,5 @@ cache/commands/*
 # Ignore the local deployment identifier.
 deployment_identifier
 
+# Ignore phpunit.xml, only phpunit.xml.dist should be committed.
 phpunit.xml
