--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -3,6 +3,9 @@
   xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.6/phpunit.xsd"
   colors="true"
   bootstrap="tests/phpunit/bootstrap.php"
+  backupGlobals="true"
+  backupStaticAttributes="true"
+  processIsolation="true"
   stopOnFailure="true"
   stopOnError="true"
   verbose="true">
