--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,6 +10,7 @@
   <testsuites>
     <testsuite name="BLT Test Suite">
       <directory>tests/phpunit</directory>
+      <exclude>tests/phpunit/BltProject/MultiSiteTest.php</exclude>
     </testsuite>
   </testsuites>
 
