Refactor internal testing to exclusively use PHPUnit. (#2456)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore composer.lock to allow highest/lowest testing.
+composer.lock
+
 # Ignore blted8 files
 blted8/composer.lock
 blted8/vendor
@@ -121,3 +124,6 @@ cache/commands/*
 
 # Ignore the local deployment identifier.
 deployment_identifier
+
+# Ignore phpunit.xml, only phpunit.xml.dist should be committed.
+phpunit.xml
