--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,13 +1,27 @@
-<!-- phpunit.xml.dist -->
-<phpunit>
+<phpunit
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.6/phpunit.xsd"
+  colors="true"
+  bootstrap="tests/phpunit/bootstrap.php"
+  stopOnFailure="true"
+  stopOnError="true"
+  verbose="true">
+
   <testsuites>
     <testsuite name="BLT Test Suite">
       <directory>tests/phpunit</directory>
+      <exclude>tests/phpunit/BltProject/MultiSiteTest.php</exclude>
+      <exclude>tests/phpunit/BltProject/SetupCommandTest.php</exclude>
     </testsuite>
   </testsuites>
-  <filter>
-    <whitelist processUncoveredFilesFromWhitelist="true">
-      <directory suffix=".php">src/Robo</directory>
-    </whitelist>
-  </filter>
+
+  <php>
+    <!-- These variables may alternatively be set as environment variables. -->
+    <!-- E.g., `BLT_PRINT_COMMAND_OUTPUT=1 ./vendor/bin/phpunit` -->
+    <env name="BLT_RECREATE_SANDBOX_MASTER" value="1"/>
+    <env name="BLT_PRINT_COMMAND_OUTPUT" value="1"/>
+    <env name="BLT_REPLACE_SANDBOX_INSTANCE" value="1"/>
+    <env name="BLT_ENV" value="ci"/>
+  </php>
+
 </phpunit>
