--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "docs": "http://blt.readthedocs.io/en/stable"
     },
     "type": "composer-plugin",
-    "license": "GPL-2.0",
+    "license": "GPL-2.0-only",
     "require": {
         "php": ">=5.6",
         "asm89/twig-lint": "^1.0.2",
