--- a/config/build.yml
+++ b/config/build.yml
@@ -25,9 +25,9 @@ blt:
   update:
     ignore-existing-file: ${blt.root}/scripts/blt/ignore-existing.txt
   config-files:
-    project: ${repo.root}/blt/project.yml
-    local: ${repo.root}/blt/project.local.yml
-    example-local: ${repo.root}/blt/example.project.local.yml
+    project: ${repo.root}/blt/blt.yml
+    local: ${repo.root}/blt/local.blt.yml
+    example-local: ${repo.root}/blt/example.local.blt.yml
     schema-version: ${repo.root}/blt/.schema_version
   command-cache-dir: ${blt.root}/cache/commands
 
@@ -232,3 +232,5 @@ validate:
 vm:
   enable: false
   config: ${repo.root}/box/config.yml
+  vagrant:
+      hostname: ${project.local.hostname}
