--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,6 +13,12 @@
     </testsuite>
   </testsuites>
 
+  <groups>
+    <exclude>
+      <group>requires-vm</group>
+    </exclude>
+  </groups>
+
   <php>
     <!-- These variables may alternatively be set as environment variables. -->
     <!-- E.g., `BLT_PRINT_COMMAND_OUTPUT=1 ./vendor/bin/phpunit` -->
