--- a/template/blt/ci.blt.yml
+++ b/template/blt/ci.blt.yml
@@ -1,6 +1,6 @@
 # Valid values are:
 #   install - Installs Drupal from scratch.
-#   sync - Uses `blt sync` to pull a remote db from drush.aliases.remote.
+#   sync - Uses `blt drupal:sync` to pull a remote db from drush.aliases.remote.
 #   import - Imports a .sql file from setup.dump-file.
 # setup.strategy: import
 # Relative to the drupal docroot directory.
