--- a/template/blt/example.local.blt.yml
+++ b/template/blt/example.local.blt.yml
@@ -1,4 +1,4 @@
-# Override any settings as necessary by copying to project.local.yml
+# Override any settings as necessary by copying to local.yml
 #project:
 #  local:
 #    protocol: http
@@ -9,4 +9,3 @@
 #drush:
 #  aliases:
 #    local: local.mysite.dev
-environment: local
