--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,9 @@
         "oomphinc/composer-installers-extender": "^1.1",
         "phpunit/phpunit": "^4.8",
         "squizlabs/php_codesniffer": "^2.7",
-        "symfony/console": "~3.2.8",
+        "symfony/console": "^3.2.8",
         "symfony/twig-bridge": "^3.3",
-        "symfony/yaml": "~3.2.8",
+        "symfony/yaml": "^3.2.8",
         "tivie/php-os-detector": "^1.0",
         "typhonius/acquia-php-sdk-v2": "^1.0.2",
         "wikimedia/composer-merge-plugin": "^1.4.1"
