Run long PHPUnit tests separately.

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,8 @@ env:
     - BUILD_DIR=$TRAVIS_BUILD_DIR
     - DRUPAL_CORE_HEAD=8.5.x-dev
   matrix:
-    - DRUPAL_CORE_VERSION=default
+    - DRUPAL_CORE_VERSION=default PHPUNIT_EXCLUDE_GROUP='long'
+    - DRUPAL_CORE_VERSION=default PHPUNIT_GROUP='long'
     - DRUPAL_CORE_VERSION=$DRUPAL_CORE_HEAD
 
 matrix:
@@ -57,6 +58,7 @@ install:
 
 script:
   - ${BLT_DIR}/vendor/bin/robo release:test
+
 before_deploy:
   - cd ${TRAVIS_BUILD_DIR}/../blted8
   # The BLTed8 project will need its ssh_known_hosts configured to push to ACF.
