--- a/template/tests/behat/example.local.yml
+++ b/template/tests/behat/example.local.yml
@@ -53,3 +53,6 @@ local:
         drupal_root: ${docroot}
       drush:
         alias: '@self'
+      subcontexts:
+        paths: [ ]
+        autoload: 0
