--- a/scripts/blt/ci/internal/ci.yml
+++ b/scripts/blt/ci/internal/ci.yml
@@ -1,3 +1,5 @@
 modules.ci.enable: [ views_ui ]
 # We cannot use 127.0.0.1:8888 for vm hostname due to vagrant restrictions.
 vm.vagrant.hostname: local.${project.machine_name}.com
+drush.debug: false
+drush.verbose: true
