Fixes #1787: Use full path to example test file in phpunit config.

--- a/config/build.yml
+++ b/config/build.yml
@@ -123,7 +123,7 @@ phpcbf:
 phpunit:
   - path: '${repo.root}/tests/phpunit'
     class: 'ExampleTest'
-    file: 'ExampleTest.php'
+    file: '${repo.root}/tests/phpunit/ExampleTest.php'
     config: null
   # Customization for one or more custom phpunit test locations
   # and if the core (or custom) config file should be included as a -c parameter.
