--- a/scripts/travis/.travis.yml
+++ b/scripts/travis/.travis.yml
@@ -2,8 +2,11 @@ sudo: false
 language: php
 dist: trusty
 
+# Adjust the version of PHP to match your production environment.
+# Making this version number greater than the production environment can unintended consequences including a
+# non-functional prod environment.
 php:
-  - 7.1
+  - 5.6
 
 matrix:
   fast_finish: true
@@ -57,6 +60,7 @@ install:
 script:
   - source ${BLT_DIR}/scripts/travis/run_tests
 
+# The version below MUST match the php version indicated at the top of this file, otherwise the artifact won't build.
 deploy:
    - provider: script
      script: "${BLT_DIR}/scripts/travis/deploy_branch"
