Fixes #2688: Adding ConfigContext to behat config by default.

--- a/template/tests/behat/example.local.yml
+++ b/template/tests/behat/example.local.yml
@@ -21,6 +21,7 @@ local:
         - Drupal\DrupalExtension\Context\MinkContext
         - Drupal\DrupalExtension\Context\MessageContext
         - Drupal\DrupalExtension\Context\DrushContext
+        - Drupal\DrupalExtension\Context\ConfigContext
   extensions:
     DMore\ChromeExtension\Behat\ServiceContainer\ChromeExtension: ~
     Behat\MinkExtension:
