--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,15 @@
         "dflydev/dot-access-data": "^1.1.0",
         "doctrine/common": "^2.5",
         "doctrine/inflector": "~1.1.0",
+        "drupal/acquia_connector": "^1.5.0",
+        "drupal/acquia_purge": "^1.0-beta3",
+        "drupal/cog": "^1.0.0",
         "drupal/coder": "^8.2.11",
         "drush/drush": "^9.3.0",
+        "drupal/config_split": "^1.0.0",
+        "drupal/core": "^8.5.0",
+        "drupal/devel": "^1.0.0",
+        "drupal/memcache": "^2.0-alpha5",
         "grasmash/drupal-security-warning": "^1.0.0",
         "grasmash/yaml-cli": "^1.0.0",
         "grasmash/yaml-expander": "^1.2.0",
@@ -49,9 +56,19 @@
     },
     "extra": {
         "class": "Acquia\\Blt\\Composer\\Plugin",
-        "composer-exit-on-patch-failure": true,
         "branch-alias": {
             "dev-master": "9.x-dev"
+        },
+        "installer-paths": {
+            "template/docroot/core": ["type:drupal-core"],
+            "template/docroot/modules/contrib/{$name}": ["type:drupal-module"],
+            "template/docroot/modules/custom/{$name}": ["type:drupal-custom-module"],
+            "template/docroot/profiles/contrib/{$name}": ["type:drupal-profile"],
+            "template/docroot/profiles/custom/{$name}": ["type:drupal-custom-profile"],
+            "template/docroot/themes/contrib/{$name}": ["type:drupal-theme"],
+            "template/docroot/themes/custom/{$name}": ["type:drupal-custom-theme"],
+            "template/docroot/libraries/{$name}": ["type:drupal-library"],
+            "template/drush/contrib/{$name}": ["type:drupal-drush"]
         }
     },
     "bin": [
