--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,12 @@
     },
     "type": "composer-plugin",
     "license": "GPL-2.0-only",
+    "repositories": {
+        "drupal": {
+            "type": "composer",
+            "url": "https://packages.drupal.org/8"
+        }
+    },
     "require": {
         "php": ">=5.6",
         "composer-plugin-api": "^1.1.0",
