adding composer as dev dep.

--- a/composer.json
+++ b/composer.json
@@ -95,6 +95,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
+        "composer/composer": "^2.7.0",
         "knplabs/github-api": "^2.6",
         "php-http/guzzle6-adapter": "^1.1"
     }
