--- a/template/phpcs.xml.dist
+++ b/template/phpcs.xml.dist
@@ -12,7 +12,7 @@
 
   <!-- Set ignore extensions. -->
   <!-- @see https://www.drupal.org/node/2867601#comment-12075633 -->
-  <arg name="ignore" value="*.css,*.md,*.txt,*.png,*.gif,*.jpeg,*.jpg"/>
+  <arg name="ignore" value="*.css,*.md,*.txt,*.png,*.gif,*.jpeg,*.jpg,*.svg"/>
 
   <!-- Use colors in output. -->
   <arg name="colors"/>
