BLT update hook for template and composer changes.

--- a/template/drush/drush.yml
+++ b/template/drush/drush.yml
@@ -9,3 +9,4 @@ drush:
     include:
       - '${env.home}/.drush'
       - /usr/share/drush/commands
+      - ../docroot/modules/contrib/acsf/acsf_init/src
