--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "license": "GPL-2.0-only",
     "require": {
         "php": ">=5.6",
+        "bamarni/composer-bin-plugin": "^1.2",
         "composer-plugin-api": "^1.0.0",
         "composer/installers": "^1.2.0",
         "composer/semver": "^1.4",
@@ -26,7 +27,6 @@
         "doctrine/common": "^2.5",
         "doctrine/inflector": "~1.1.0",
         "drupal/coder": "^8.2.11",
-        "drush/drush": "^9.1.0",
         "grasmash/drupal-security-warning": "^1.0.0",
         "grasmash/yaml-cli": "^1.0.0",
         "grasmash/yaml-expander": "^1.2.0",
