Update deploy gitignore Drupal managed files paths
Only ignore matching directories at the exact paths for Drupal managed
files.

--- a/scripts/blt/deploy/.gitignore
+++ b/scripts/blt/deploy/.gitignore
@@ -4,9 +4,9 @@ local.*
 local.blt.yml
 
 # Ignore paths that contain user-generated content.
-docroot/sites/*/files
-/files-private
-docroot/sites/*/private
+/docroot/sites/*/files/
+/docroot/sites/*/private/
+/files-private/
 
 # Ignore build artifacts
 tmp
