Update deploy gitignore temp and reports paths
Ignore the root reports and tmp directory paths only.

--- a/scripts/blt/deploy/.gitignore
+++ b/scripts/blt/deploy/.gitignore
@@ -8,9 +8,9 @@ local.blt.yml
 /docroot/sites/*/private/
 /files-private/
 
-# Ignore build artifacts
-tmp
-reports
+# Ignore build artifacts.
+/tmp/
+/reports/
 
 # OS X
 .DS_Store
