--- a/template/phpcs.xml.dist
+++ b/template/phpcs.xml.dist
@@ -34,5 +34,6 @@
   <exclude-pattern>*/behat</exclude-pattern>
   <exclude-pattern>*/node_modules</exclude-pattern>
   <exclude-pattern>*/vendor</exclude-pattern>
+  <exclude-pattern>*md</exclude-pattern>
 
 </ruleset>
