Removing more of composer.required.json.

--- a/scripts/probo/.probo.yml
+++ b/scripts/probo/.probo.yml
@@ -9,7 +9,7 @@ steps:
      - composer self-update
      - composer validate --no-check-all --ansi
      - composer install
-     - composer run-script blt-alias
+     - ./vendor/bin/blt blt:init:shell-alias -y
 
   - name: 'Install Drupal'
     plugin: Drupal
