--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "drupal/core": "^8.5.0",
         "drupal/devel": "^1.0.0",
         "drupal/memcache": "^2.0-alpha5",
+        "drupal-composer/drupal-scaffold": "^2.1.0",
         "grasmash/drupal-security-warning": "^1.0.0",
         "grasmash/yaml-cli": "^1.0.0",
         "grasmash/yaml-expander": "^1.2.0",
