--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,10 @@
         "drupal/config_split": "^1.0.0",
         "drupal/core": "^8.5.0",
         "drupal/devel": "^1.0.0",
+        "drupal/features": "^1.0.0",
         "drupal/memcache": "^2.0-alpha5",
         "drupal/seckit": "^1.0.0-alpha2",
+        "drupal/shield": "^1.2.0",
         "drupal-composer/drupal-scaffold": "^2.1.0",
         "grasmash/drupal-security-warning": "^1.0.0",
         "grasmash/yaml-cli": "^1.0.0",
