Moving CONTRIBUTING.md out of .github/ directory and into docs/ and refactoring links.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,4 +51,4 @@ pages:
         - Setting up multisite: 'multisite.md'
         - Open source contribution: 'os-contribution.md'
   - Extending / Overriding BLT: 'extending-blt.md'
-  - Support & Contribution: '.github/CONTRIBUTING.md'
+  - Support & Contribution: 'CONTRIBUTING.md'
