Symlinking template/drush/README.md and template/patches/README.md into docs/ dir and updating links.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,8 +33,8 @@ pages:
           - Running project tasks:
             - Overview: 'project-tasks.md'
             - Dependency management: 'dependency-management.md'
-            - Patches: 'template/patches/README.md'
-            - Drush: 'template/drush/README.md'
+            - Patches: 'patches.md'
+            - Drush: 'drush.md'
             - Git hooks: 'scripts/git-hooks/README.md'
           - Development Workflow: 'dev-workflow.md'
           - PHPStorm setup: 'phpstorm.md'
