Symlinking scripts/git-hooks/README.md to docs/git-hooks.md and updating links.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,7 +35,7 @@ pages:
             - Dependency management: 'dependency-management.md'
             - Patches: 'patches.md'
             - Drush: 'drush.md'
-            - Git hooks: 'scripts/git-hooks/README.md'
+            - Git hooks: 'git-hooks.md'
           - Development Workflow: 'dev-workflow.md'
           - PHPStorm setup: 'phpstorm.md'
           - Configuration Management: 'configuration-management.md'
