--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,8 +1,7 @@
 # Ignore configuration files that may contain sensitive information.
 local.settings.php
-local.drushrc.php
 local.drush.yml
-local.aliases.drushrc.php
+local.site.yml
 local.services.yml
 tests/behat/local.yml
 box/local.config.yml
