--- a/scripts/drupal-vm/config.yml
+++ b/scripts/drupal-vm/config.yml
@@ -105,5 +105,5 @@ php_memory_limit: "512M"
 solr_version: "4.5.1"
 
 post_provision_scripts:
-  - "../../../acquia/blt/scripts/drupal-vm/configure-solr.sh"
-  - "../../../acquia/blt/scripts/drupal-vm/post-provision.php"
+  - "{{ drupal_composer_install_dir }}/vendor/acquia/blt/scripts/drupal-vm/configure-solr.sh"
+  - "{{ drupal_composer_install_dir }}/vendor/acquia/blt/scripts/drupal-vm/post-provision.php"
