Fix single quotes.

--- a/scripts/drupal-vm/config.yml
+++ b/scripts/drupal-vm/config.yml
@@ -105,7 +105,7 @@ php_memory_limit: "512M"
 solr_version: "4.5.1"
 
 # Use drush launcher with 0.6.0 default
-drush_launcher_install: 'yes'
+drush_launcher_install: "yes"
 drush_launcher_version: 0.6.0
 
 post_provision_scripts:
