--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "symfony/twig-bridge": "^3.3",
         "symfony/yaml": "^3.2.8",
         "tivie/php-os-detector": "^1.0",
-        "typhonius/acquia-php-sdk-v2": "dev-master",
+        "typhonius/acquia-php-sdk-v2": "^1.0.3",
         "wikimedia/composer-merge-plugin": "^1.4.1"
     },
     "autoload": {
