Revert "Multisite setup enhancements and bugfixes (#2997)"
This reverts commit d0da33952b0b85bb98952d0a3321241e6af07086.

--- a/scripts/drupal-vm/config.yml
+++ b/scripts/drupal-vm/config.yml
@@ -60,12 +60,7 @@ mysql_users:
   - name: drupal
     host: "%"
     password: drupal
-    priv: "*.*:ALL"
-  - name: drupal
-    host: "localhost"
-    password: drupal
-    priv: "*.*:ALL"
-
+    priv: "drupal%.*:ALL"
 
 # Set this to 'false' if you don't need to install drupal (using the drupal_*
 # settings below), but instead copy down a database (e.g., using drush sql-sync).
