--- a/template/blt/ci.blt.yml
+++ b/template/blt/ci.blt.yml
@@ -2,6 +2,7 @@
 #   install - Installs Drupal from scratch.
 #   sync - Uses `blt drupal:sync` to pull a remote db from drush.aliases.remote.
 #   import - Imports a .sql file from setup.dump-file.
+#   dual - Runs sync to test database updates, then install for tests.
 # setup.strategy: import
 # Relative to the drupal docroot directory.
 # setup.dump-file: /tmp/my-dump-file.sql
