--- a/.gitignore
+++ b/.gitignore
@@ -78,6 +78,7 @@ template/docroot/.eslintrc
 template/docroot/.eslintrc.json
 template/docroot/.gitattributes
 template/docroot/.htaccess
+template/docroot/.ht.router.php
 template/docroot/index.php
 template/docroot/robots.txt
 template/docroot/sites/default/default.settings.php
