--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,5 @@
 # Drupal editor configuration normalization
-# @see http://editorconfig.org/
+# @see https://editorconfig.org/
 
 # This is the top-most .editorconfig file; do not search in parent directories.
 root = true
@@ -17,5 +17,5 @@ insert_final_newline = true
 [Makefile,*.mk]
 indent_style = tab
 
-[composer.json]
+[{composer.json,*.py}]
 indent_size = 4
