Add patchutils through extra_packages in VM config (#3191)

--- a/scripts/drupal-vm/config.yml
+++ b/scripts/drupal-vm/config.yml
@@ -78,6 +78,7 @@ nodejs_npm_global_packages:
   - name: yarn
 nodejs_install_npm_user: "{{ drupalvm_user }}"
 npm_config_prefix: "/home/{{ drupalvm_user }}/.npm-global"
+extra_packages: ${extra_packages}
 installed_extras: ${installed_extras}
 
 # PHP 7.1.
