--- a/config/build.yml
+++ b/config/build.yml
@@ -214,6 +214,7 @@ tests:
     chromedriver:
       port: 9515
       args: null
+    browsertest_output_directory: 'browser_output'
   phpunit:
   - path: '${repo.root}/tests/phpunit'
     config: '${docroot}/core/phpunit.xml.dist'
