--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "require": {
         "php": ">=7.1",
         "acquia/drupal-spec-tool": "^2.0.0",
+        "behat/mink": "1.7.x-dev#9ea1ceb",
         "composer-plugin-api": "^1.1.0",
         "composer/installers": "^1.2.0",
         "composer/semver": "^1.4",
