Pipelines pr-closed event doesn't fire.

--- a/scripts/pipelines/acquia-pipelines.yml
+++ b/scripts/pipelines/acquia-pipelines.yml
@@ -44,7 +44,7 @@ events:
       - deploy:
           script:
             - pipelines-deploy
-  pre-closed:
+  pr-closed:
     steps:
       - deploy:
           script:
