--- a/subtree-splits/blt-project/composer.json
+++ b/subtree-splits/blt-project/composer.json
@@ -40,7 +40,7 @@
         "drupal/qa_accounts": "^1.0.0-alpha1"
     },
     "require-dev": {
-        "acquia/blt-require-dev": "^10.0.0"
+        "acquia/blt-require-dev": "^10.0.0-alpha1"
     },
     "extra": {
         "enable-patching": true,
