--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,6 @@
     "require": {
         "php": ">=7.1",
         "acquia/drupal-spec-tool": "^2.0.0",
-        "behat/mink": "1.7.x-dev#9ea1cebe3dc",
         "composer-plugin-api": "^1.1.0",
         "composer/installers": "^1.2.0",
         "composer/semver": "^1.4",
@@ -36,7 +35,7 @@
         "drupal/coder": "^8.3.1",
         "drush/drush": "~9.5.0",
         "drupal/config_split": "^1.0.0",
-        "drupal/core": "^8.6.0",
+        "drupal/core": "8.7.x-dev",
         "drupal/features": "^3.8.0",
         "drupal/memcache": "^2.0-alpha5",
         "drupal/seckit": "^1.0.0-alpha2",
