--- a/config/build.yml
+++ b/config/build.yml
@@ -214,6 +214,9 @@ tests:
     simpletest_db: 'sqlite://localhost/${tests.drupal.sqlite}'
     symfony_deprecations_helper: 'disabled'
   phpunit:
+  - path: '${repo.root}/tests/phpunit'
+    config: ${docroot}/core/phpunit.xml.dist
+    directory: '${repo.root}/tests/phpunit'
   run-tests:
 
 validate:
